fixed verticle alignment bug, added nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1 {
   text-align: center;
   font-size: 3em;
   color: rgb(255, 255, 255);
-  margin-top: 60px;
+  margin-top: 15px;
   margin-bottom: 45px;
 }
 
@@ -32,7 +32,7 @@ h3 {
   color: rgb(255, 255, 255)
 }
 
-ul, table {
+table {
   color: rgb(243, 63, 153);
   text-align: center;
   font-family: Helvetica, Arial, sans-serif;
@@ -66,6 +66,34 @@ aside {
   border-style: solid;
   border-radius: 75px;
   padding: 30px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 1px solid #e7e7e7;
+  background-color: black;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  padding: 10px 40px 10px 40px;
+  border-left: 1px solid rgb(165, 157, 157);
+}
+
+li:first-child {
+  margin-left: 35px;
+}
+
+li:last-child {
+  border-right: 1px solid rgb(165, 157, 157);
 }
 
 #section1 div {
@@ -119,6 +147,11 @@ aside {
   background-color: none;
   border: none;
   padding: none;
+  margin-right: none;
+}
+
+#aboutUs {
+  margin-top: 90px;
 }
 
 .indexDiv {
